# LinPie

./: README.md  install.sh  magpie-scaler.desktop  magpie_scaler.py
linux-upscaler/: CMakeLists.txt  LICENSE  README.md
linux-upscaler/src/: main.cpp
linux-upscaler/src/capture/: capture_wrapper.cpp
linux-upscaler/src/renderer/: renderer_gl.cpp
